--- a/IJAC/loc-diff-terms-ijac.tex
+++ b/IJAC/loc-diff-terms-ijac.tex
@@ -1093,7 +1093,7 @@ free algebra in $\sV$. The following are equivalent:
 \end{proof}
 
 
-\draftsecskip
+% \draftsecskip
 
 
 \section{Local difference terms}
@@ -1342,7 +1342,7 @@ as desired.
   $(a,b,1)$.
 \end{proof}
 
-\draftsecskip
+% \draftsecskip
 
 \subsection{Algorithm 1: existence of a difference term operation}
 \label{sec:algor-1}
@@ -1792,7 +1792,7 @@ The converse of Lemma~\ref{lem:products} is harder to prove.
 
 \end{proof}
 
-\draftsecskip
+% \draftsecskip
 
 
 
@@ -1800,14 +1800,6 @@ The converse of Lemma~\ref{lem:products} is harder to prove.
 This research was supported by the National Science 
 Foundation under Grant No. 1500235.
 
-%% \renewcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
-%% \bibliographystyle{spmpsci}
-%% \bibliographystyle{alphaurl}
-\bibliographystyle{ws-ijac}
-\bibliography{inputs/refs}
-
-
-\draftsecskip
 
 
 
@@ -2068,6 +2060,14 @@ of~\ref{cor:loc-diff-term}; nevertheless, it appears in the appendix
   %% $d$ is a difference term operation for $\bA$.
 \end{proof}
 
+%% \renewcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
+%% \bibliographystyle{spmpsci}
+%% \bibliographystyle{alphaurl}
+\bibliographystyle{ws-ijac}
+\bibliography{inputs/refs}
+
+
+% \draftsecskip
 \end{document}
 
 
@@ -2238,7 +2238,7 @@ $S$.
   
 \end{proof}
 
-\draftsecskip
+% \draftsecskip
 
 
 
