--- a/notes/prod-cong.tex
+++ b/notes/prod-cong.tex
@@ -487,7 +487,7 @@ As noted above in Lemma~\ref{lem:preliminary-facts},
 $\Cg^{\bF}(x,y) = 1$, so we will be especially interested in 
 \begin{equation}
 \label{eq:11}  
-\Delta_{1, 1} := \Cg^{F\times F}\{\bigl((x,x), (y,y)\bigr) \mid x, y \in F\}.\]
+\Delta_{1, 1} := \Cg^{F\times F}\{\bigl((x,x), (y,y)\bigr) \mid x, y \in F\}.
 \end{equation}
 Recall that $\bF$ is abelian if and only if
  $\exists\, \theta \in \Con (\bF^2)$ with the diagonal $0_F:= \{(z,z)\mid z \in F\}$ 
@@ -530,24 +530,11 @@ takes each $R \in \Eq(\beta)$ to the equivalence relation
 \newcommand{\Psiba}{\ensuremath{\Psi}}
 
 We are finally ready to give the promised alternative description of the
-commutator $[\alpha, \beta]$. (Spoiler alert! It is the least fixed point of
-$\Phi_{\beta, \alpha}$.)
-%% the closure operator  in~(\ref{eq:6})
+commutator $[\alpha, \beta]$. 
+% (Spoiler alert! It is the least fixed point of $\Phi_{\beta, \alpha}$.)
 \begin{lemma}
   \label{lem:fixed-point-comm}
   Let $\bA$ be an algebra with $\alpha$, $\beta\in \Con(\bA)$.
-  If $\Phi:=\Phi_{\beta, \alpha}$ is defined as in~(\ref{eq:6}), then 
-  \begin{enumerate}[(i)]
-  \item \label{item:111} $\Phiba$ is a closure operator on $\sP(\beta)$;
-  \item \label{item:222} $[\alpha, \beta]$ is the least fixed point of $\Phiba$.
-  \end{enumerate}
-\end{lemma}
-\noindent (A proof of Lemma~\ref{lem:fixed-point-comm} appears in Appendix
-Section~\ref{sec:fixed-point-lemma} below.)
-
-\begin{lemma}
-  \label{lem:fixed-point-comm-alt}
-  Let $\bA$ be an algebra with $ \alpha$, $\beta\in \Con(\bA)$.
   If $\Phi:=\Phi_{\beta, \alpha}$ is defined as in~(\ref{eq:6}), then 
   \begin{enumerate}[(i)]
   \item \label{item:111} $\Phiba$ is a closure operator on $\sP(\beta)$;
