major mods, new doc: fast-comm

--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -106,6 +106,10 @@
 \newcommand{\malcev}{Mal'tsev\xspace}
 \newcommand{\var}[1]{\ensuremath{\mathcal{#1}}}
 
+\newcommand{\upalpha}{\ensuremath{\alpha^{\uparrow}}}
+\newcommand{\downalpha}{\ensuremath{\alpha^{\downarrow}}}
+\newcommand{\upbeta}{\ensuremath{\beta^{\uparrow}}}
+\newcommand{\downbeta}{\ensuremath{\beta^{\downarrow}}}
 
 
 \newcommand{\bs}{\ensuremath{\mathbf{s}}}
